# ludoteca-vianacon

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Pipfile  Procfile  Procfile_backup  README.md  app.json  associados.csv  package-lock.json  package.json  pyproject.toml  static.json  vue.config.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml
backend/: api_bgggame.json  associates.csv  bgggames_table.csv  ludoteca.csv  ludoteca_leiriacon.csv  players.csv  players.json  urls.py  wsgi.py
backend/api/: admin.py  apps.py  backends.py  filters.py  models.py  permissions.py  serializers.py  signals.py  utils.py  views.py
backend/settings/: dev.py  prod.py
docs/: index.md
public/: index.html
public/static/: main.css  main.css.map  main.scss
src/: App.vue  main.js  router.js
src/components/: BetterSelect.vue  CheckinModal.vue  Container.vue  CurrentUser.vue  DropdownList.vue  EndTemplateHeader.vue  FilterSelect.vue  Filters.vue  FiltersButton.vue  FormSelect.vue  GameCard.vue  GoogleDocs.vue  Header.vue  ItemCard.vue  LibraryGameCard.vue  Messages.vue  Modal.vue  ModalGameSelect.vue  ModalPlayerSelect.vue  ModalSelect.vue  ModalSupplierSelect.vue  Navbar.vue  Pagination.vue  PersonCard.vue  TopNav.vue  UserInfo.vue  VueDemo.vue
src/enums/: permissions.enum.js
src/mixins/: axios.mixin.js  axios.utils.js  form.mixins.js  games.mixin.js  person.mixin.js  tickets.mixin.js  users.mixin.js
src/pages/: Authenticated.vue  Home.vue  Login.vue  PageNotFound.vue  RequestResetPassword.vue
src/services/: api.js  bgg-api.js  (+19 more)
(+142 files in other folders)
